# 21_school_projects

./: 10.02.2019  README.md  args_parser.c  fillit.c  fillit.tar  fillit2.c  main.c  reading.c  virtual_header.h
BigInt/: BigInt.cpp  a.out  program.cpp
CopyFillit/: Makefile  \  f.c  fillit  fillit.c  fillit.h  fillit.h.gch  find_vertices.c  prints.c  validation.c
Corewar/: .gitignore  .gitmodules  Makefile  author
Fillit/: Makefile  a.out  author  changing_lists.c  fillit  fillit.c  fillit.h  fillit.h.gch  fillit.tar  find_vertices.c  free.c  ft_lists.c  prints.c  test.txt  test1.txt  validation.c
GNL_test/: get_next_line.h.gch  hard_main.c  large_file.txt  main.c  test1.txt
GNLthroughArray/: a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch
Get_Next_Line/: .data.swp  .get_next_line..swp  .get_next_line.c.swp  a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch
Lem-in/: .Makefile.swp  CMakeLists.txt  Cocu_Xyu  Makefile  actions_with_paths.c  actions_with_queue.c  actions_with_ways.c  bfc.c  big  bla  checkers.c  counters.c  exits_entrances.c  finders.c  flow_thousand  handlers.c  initializers.c  lem-in  lem-in.c  lem-in.h  lem_in.c  lem_in.h  middle  other.c  output_directs  prints.c  readers.c  reading.c  release.c  start  starter.c  superposition  superpostion2  test  test.0  test.1  test.2
Libft/: libft.h.gch
LongArithmetic/: LA.h  LongArithmetic.c
New_GNL/: a.out  data  get_next_line.c  get_next_line.h  get_next_line.h.gch
New_Lem-in/: CMakeLists.txt  Makefile  counters.c  flow_ten  lem-in  lem-in.c  lem-in.h  readers.c  reading.c  release.c  superposition2
Printf/: CMakeLists.txt  Cleanup.c  Getting.c  Makefile  Makefile (1)  a.out  additional_func.c  bin_staff.c  cheks.c  conversions.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  ft_sizedup.c  handler_b.c  handler_d.c  handler_f.c  handler_o.c  handler_o_x.c  handler_p.c  handler_specifier.c  handler_text.c  handler_u.c  handler_unicode.c  handler_x.c  handler_x_big.c  hex.c  hex_big_staff.c  hex_staff.c  long_arithmetic.c  main.c  oct_int.c  oct_staff.c  overflow.c  printf.c  remaining_handlers.c  represents.c  spare_d.c  start.sh  test  (+2 more)
Printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
Printf/libft/: Makefile  ft_intlen.c  ft_itoa.c  ft_litoa.c  ft_memset.c  ft_pow.c  ft_strdup.c  ft_strfjoin.c  ft_strlen.c  ft_strljoin.c  ft_strnew_set.c  ft_uitoa.c  ft_ulitoa.c  libft.h  libft.h.gch
Push_Swap/: CMakeLists.txt  Makefile  a.out  checker  checker.c  (+13 more)
(+372 files in other folders)
